Cleanup and small changes after discussions in https://github.com/aspnet/Mvc/issues/5816

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -49,7 +49,7 @@
     </PackageReference>
   </ItemGroup>
 <ItemGroup>
-  <ProjectReference Include="..\lib\lib.csproj" />
+  <ProjectReference Include="..\lib.x\lib.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
