--- a/lib.x/lib.csproj
+++ b/lib.x/lib.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
     <RootNamespace>ClassLibrary</RootNamespace>
+    <AssemblyName>ClassLibrary</AssemblyName>
   </PropertyGroup>
 
 </Project>
